--- a/codigo-azul-front/src/components/encabezado/header.css
+++ b/codigo-azul-front/src/components/encabezado/header.css
@@ -3,16 +3,13 @@
     padding: 0px;
 }
 
-#hl{
-    display: flex;
-    position: relative; 
-    justify-content: center; 
-    align-items: center;
-    
-    background-color: #92AAFF;
-    width: 100%;
-    height: 20vh;
+.container-fluid{
+    background-color: #C0CEFF;
 }
+.contain{
+    background-color: #C0CEFF;
+}
+
 
 #logo{
     width: 20vh;
