--- a/codigo-azul-front/src/components/Login/Login.css
+++ b/codigo-azul-front/src/components/Login/Login.css
@@ -1,10 +1,21 @@
-/* Estilos para el contenedor principal */
-.parent {
+/* Anula los estilos del archivo reboot.scss para button, input, optgroup, select y textarea */
+button{
+    margin: 10px !important;
+}
+input, optgroup, select, textarea {
+    margin: 6px !important; /* Importante para anular estilos previos */
+    font-family: inherit !important;
+    font-size: inherit !important;
+    line-height: inherit !important;
+  }
+  
+  /* Resto de tus estilos para el contenedor principal */
+  .parent {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 80vh; /* Ajusta la altura según tu diseño */
+    height: 80vh;
     background-color: #fff;
   }
   
@@ -21,10 +32,10 @@
     width: 20%;
     height: 40px;
     background-color: #fff;
-    margin-bottom: 10px;
     padding: 10px;
     border-radius: 5px;
-    border: 1px solid #ccc; /* Puedes personalizar el borde según tus preferencias */
+    border: 1px solid #ccc;
+    margin-bottom: 0; /* Reducido el espacio entre los input a 5px */
   }
   
   /* Estilos para el botón de inicio de sesión */
@@ -36,10 +47,11 @@
     padding: 10px 20px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin-top: 30px;
   }
   
   button:hover {
-    background-color: #095c98; /* Cambia el color al pasar el mouse por encima */
+    background-color: #095c98;
   }
   
   /* Estilos para el mensaje de error */
@@ -47,3 +59,4 @@
     color: red;
     margin-top: 10px;
   }
+  
